--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -15,13 +15,13 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
+            <NavLink class="nav-link" href="Flights">
+                <span class="oi oi-plus" aria-hidden="true"></span> Flights
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+            <NavLink class="nav-link" href="Reservations">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Reservations
             </NavLink>
         </div>
     </nav>
