we messed up but it's ok :|

--- a/Pages/Reservations.razor
+++ b/Pages/Reservations.razor
@@ -1,4 +1,4 @@
-﻿availableseats@page "/Reservations"
+﻿@page "/Reservations"
 
 @using Assignment_2.Data
 
@@ -13,12 +13,6 @@
             </tr>
         </thead>
         <tbody>
-            
-                <tr>
-                    <td>Any</td>
-                    <td>Any</td>
-                    <td>Any</td>
-                </tr>
         </tbody>
     </table>
 
