--- a/Pages/Flights.razor
+++ b/Pages/Flights.razor
@@ -1,16 +1,22 @@
 ﻿@page "/flights"
 <h3>Flights</h3>
 <div class="row">
-	<div class="col-2">From:</div>
-	<div class="col-4">
+	<div class="col">From:</div>
+	<div class="col">
 		<input class="form-control" type="text" />
 	</div>
-	
+	<div class="col">To:</div>
+	<div class="col">
+		<input class="form-control" type="text" />
+	</div>
+	<div class="col">Day:</div>
+	<div class="col">
+		<input class="form-control" type="text"/>
+	</div>
+	<div class="col">
+		<input class="form-control" type="button"/>
+	</div>
 
-	<div class="col-2">To:</div>
-	<div class="col-4">
-		<input class="form-control" type="text" />
-	</div>
 </div>
 @code {
 
