--- a/Pages/Reservations.razor
+++ b/Pages/Reservations.razor
@@ -3,7 +3,7 @@
 @using Assignment_2.Data
 
 
-<div class="container">
+<div class="container-one">
     <h1 class="text-center">Reservations Finder</h1>
     <div class="row" >
         <div class="col-3">
@@ -22,11 +22,51 @@
             <button type="button" class="btn btn-primary">Find Reservations</button>
         </div>
     </div>
-    <div class="container">
+    <div class="container-two">
         <h1 class="text-center">Reservations</h1>
         <div class="row">
             <div class="col-12" >
                 <input class="form-control" type="text" />
+            </div>
+        </div>
+    </div>
+    <div class="container-three">
+        <h1 class="text-center">Reserve</h1>
+        <div class="row">
+            <div class="col-12">
+                 Reservation Code:
+                <input class="form-control" type="text" />
+            </div>
+            <div class="col-12">
+                Flight Code:
+                <input class="form-control" type="text" />
+            </div>
+            <div class="col-12">
+                Airline:
+                <input class="form-control" type="text" />
+            </div>
+            <div class="col-12">
+                Cost:
+                <input class="form-control" type="text" />
+            </div>
+            <div class="col-12">
+                Name:
+                <input class="form-control" type="text" />
+            </div>
+            <div class="col-12">
+                Citizenship:
+                <input class="form-control" type="text" />
+            </div>
+            <div class="col-12">
+                Status:
+                <input class="form-control" type="text" />
+            </div>
+        </div>
+    </div>
+    <div class="container-four">
+        <div class="row">
+            <div class="col-5">
+                <button type="button" class="btn btn-primary">Save</button>
             </div>
         </div>
     </div>
