--- a/Pages/Reservations.razor.css
+++ b/Pages/Reservations.razor.css
@@ -1,2 +1,19 @@
-﻿body {
+﻿h1{
+    font-size: 15px;
+    font-weight: bold;
+    
+}
+
+container-one ,button {
+   margin-top: 24px;
+  
+}
+
+container-two , h1 {
+    padding-left: 20px;
+    margin-top: 20px;
+}
+
+col-5  button{
+    align-items:center;
 }
