--- a/Pages/Flights.razor
+++ b/Pages/Flights.razor
@@ -1,5 +1,5 @@
 ﻿@page "/flights"
-<h3>Flights</h3>
+<h2>Flights</h2>
 <div class="row">
 	<div class="col-3">
 		From:
@@ -17,9 +17,51 @@
 	</div>
 
 	<div class="col-3">
-		<button type="button" class="find-flights">Find Flights</button>
+		<button type="button" class="btn btn-primary">Find Flights</button>
 	</div>
+</div>
 
+<h3>Flight</h3>
+<div class="row">
+	<div class="col-12">
+		<input class="form-control" type="text" />
+	</div>
+</div>
 
+<h3>Reservations</h3>
+<div class="row">
+		Flight Code:
+	<div class="col-12">
+		<input class="form-control" type="text" />
+	</div>
+		Airline:
+	<div class="col-12">
+		<input class="form-control" type="text" />
+	</div>
+		Day:
+	<div class="col-12">
+		<input class="form-control" type="text" />
+	</div>
+		Time:
+	<div class="col-12">
+		<input class="form-control" type="text" />
+	</div>
+		Cost:
+	<div class="col-12">
+		<input class="form-control" type="text" />
+	</div>
+		Name:
+	<div class="col-12">
+		<input class="form-control" type="text" />
+	</div>
+		Citizenship:
+	<div class="col-12">
+		<input class="form-control" type="text" />
+	</div>
+</div>
 
+<div class="row">
+	<div class="col">
+		<button type="button" class="btn  btn-primary">Submit</button>
+	</div>
 </div>
