--- a/Pages/Flights.razor
+++ b/Pages/Flights.razor
@@ -1,23 +1,25 @@
 ﻿@page "/flights"
+@using Assignment_2.Data;
+
 <h2>Flights</h2>
 <div class="row">
 	<div class="col-3">
 		From:
-		<input class="form-control" type="text"/>
+		<input class="form-control" type="text" name="findData()" />
 	</div>
 
 	<div class="col-3">
 		To:
-		<input class="form-control" type="text" />
+		<input class="form-control" type="text" name="findData()" />
 	</div>
 
 	<div class="col-3">
 		Day:
-		<input class="form-control" type="text" />
+		<input class="form-control" type="text" name="findData()" />
 	</div>
 
 	<div class="col-3">
-		<button type="button" class="btn btn-primary">Find Flights</button>
+		<button type="button" class="btn btn-primary" name="findFlight()">Find Flights</button>
 	</div>
 </div>
 
@@ -65,7 +67,3 @@
 		<button type="button" class="btn  btn-primary">Submit</button>
 	</div>
 </div>
-
-@code {
-	
-}
