--- a/Pages/Reservations.razor
+++ b/Pages/Reservations.razor
@@ -25,7 +25,7 @@
         <h1 class="text-center">Reservations</h1>
         <div class="row">
             <div class="col-12" >
-                <input class="form-control" type="text" />
+                <select class="form-control" type="text" />
             </div>
         </div>
     </div>
@@ -38,7 +38,7 @@
             </div>
             <div class="col-12">
                 Flight Code:
-                <input class="form-control" type="text" />
+                <input class="form-control" type="text" value="Flight Code:" readonly/>
             </div>
             <div class="col-12">
                 Airline:
