--- a/Pages/Reservations.razor
+++ b/Pages/Reservations.razor
@@ -1,6 +1,5 @@
 ﻿@page "/Reservations"
-@using Assignment_2.Data
-
+@using Assignment_2.Data 
 
 <div class="container-one">
     <h1 class="text-center">Reservations Finder</h1>
@@ -72,6 +71,7 @@
    </div>
 
     @code {
-         
+        public static List<Reservations> ReservationsList = new List<Reservations>();
+        Console.WriteLine( );
     }
 
