--- a/Pages/Reservations.razor
+++ b/Pages/Reservations.razor
@@ -72,6 +72,6 @@
 
     @code {
         public static List<Reservations> ReservationsList = new List<Reservations>();
-        Console.WriteLine( );
+       // Console.WriteLine( );
     }
 
