--- a/Pages/Reservations.razor
+++ b/Pages/Reservations.razor
@@ -72,6 +72,22 @@
 
     @code {
         public static List<Reservations> ReservationsList = new List<Reservations>();
-        Console.WriteLine( );
+         
+         public static void MakeReservation( object Flights,  string xnames,  string xcitizenship )
+
+        {
+            if (Flights != null && xnames != null && xcitizenship != null)  {
+                // make reservation code before // 
+                Reservations  newreservations = new Reservations (reservationcode, Flight.FlightCode, Flight.AirlineName, Flight.price, xnames, xcitizenship, true);
+                    //add this into a reservations list and possibly new txt file // 
+            }
+            else if (Flights.availableseats == 0)
+            {
+                throw new Exception("UNAVAIBLE");
+            }
+            else {
+                throw new Exception("fill all fields");
+                    };
+        }
     }
 
