--- a/Pages/Flights.razor
+++ b/Pages/Flights.razor
@@ -71,10 +71,10 @@
 
 	public static List<Flight> flights = new List<Flight>();
 
-	public static void Main()
+	/*public static void Main()
 	{
 
-	}
+	} */
 
 	public void addFlight()
 	{
