--- a/Pages/Reservations.razor
+++ b/Pages/Reservations.razor
@@ -86,7 +86,7 @@
         
             else if (x.availableSeats == 0)
             {
-                throw new Exception("UNAVAIBLE");
+                throw new Exception();
             }
             else {
                 throw new Exception("fill all fields");
