--- a/Pages/Reservations.razor
+++ b/Pages/Reservations.razor
@@ -1,5 +1,6 @@
 ﻿@page "/Reservations"
-@    using Assignment_2.Pages 
+@using Assignment_2.Pages 
+@using Assignment_2.Data
 
 <div class="container-one">
     <h1 class="text-center">Reservations Finder</h1>
@@ -74,17 +75,17 @@
         public static List<Reservations> ReservationsList = new List<Reservations>();
        
 
-          public static void MakeReservation(  Flight x ,  string xnames,  string xcitizenship )
+          public static void MakeReservation( Flight flight ,  string flightName,  string citizenship )
 
         {
-            if ( x != null && xnames != null && xcitizenship != null)  {
+            if ( flight != null && flightName != null && citizenship != null)  {
                 // make reservation code before // 
                string rescode = ReservationCodeGenerator(); 
-                Reservations newres = new Reservations (rescode, x.FlightCode, x.AirlineName, x.price , xnames, xcitizenship, true);
+                Reservations newres = new Reservations (rescode, flight.FlightCode, flight.AirlineName, flight.Price , flightName, citizenship, true);
                     //add this into a reservations list and possibly new txt file // 
             }
         
-            else if (x.availableSeats == 0)
+            else if (flight.AvailableSeats == 0)
             {
                 throw new Exception();
             }
