--- a/Pages/Flights.razor
+++ b/Pages/Flights.razor
@@ -66,3 +66,8 @@
 		<button type="button" class="btn  btn-primary">Submit</button>
 	</div>
 </div>
+
+@code {
+	FlightManager flightManager = new FlightManager();
+	List<FlightsCode> flights = FlightManager.GetFlights();
+}
