--- a/Pages/Flights.razor
+++ b/Pages/Flights.razor
@@ -69,5 +69,5 @@
 
 @code {
 	FlightManager flightManager = new FlightManager();
-	List<FlightsCode> flights = FlightManager.GetFlights();
+	List<Flight> flights = FlightManager.GetFlights();
 }
