--- a/Pages/Reservations.razor
+++ b/Pages/Reservations.razor
@@ -75,7 +75,7 @@
         public static List<Reservations> ReservationsList = new List<Reservations>();
        
 
-          public static void MakeReservation( FlightsCode flight ,  string flightName,  string citizenship )
+          public static void MakeReservation( Flight flight ,  string flightName,  string citizenship )
 
         {
             if ( flight != null && flightName != null && citizenship != null)  {
